# Wyrwyk

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
res/parser/: symbol-defs.tsv  valid-predecessors.tsv
res/shaders/: default.frag  default.vert  implicit-2d-v2.frag  implicit-2d.frag
src/: config.hpp  main.cpp  wyrwyk.cpp  wyrwyk.hpp
src/parser/: parser.cpp  parser.hpp  symbol-def.cpp  symbol-def.hpp  symbol-defs.cpp  symbol-defs.hpp  tokenizer.cpp  tokenizer.hpp  translator.cpp  translator.hpp  validator.cpp  validator.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/utils/: debug.cpp  debug.hpp  load-file.cpp  load-file.hpp
